# stock-dis

./: .gitignore  CMakeLists.txt  README.md
.trae/: skill-config.json
.trae/documents/: 设备管理系统优化需求文档.md  设备管理系统需求文档.md
src/: app.manifest  main.cpp
src/barcode/: BarcodeGenerator.cpp  BarcodeGenerator.h
src/core/: common.cpp  common.h
src/db/: Database.cpp  Database.h  DeviceRepository.cpp  DeviceRepository.h
src/print/: PrintService.cpp  PrintService.h
src/ui/: DeviceDetailPage.cpp  DeviceDetailPage.h  DeviceEditPage.cpp  DeviceEditPage.h  DeviceListPage.cpp  DeviceListPage.h  MainWindow.cpp  MainWindow.h  ParamFieldEditDialog.cpp  ParamFieldEditDialog.h  ParamSettingsPage.cpp  ParamSettingsPage.h  PrintPreviewPage.cpp  PrintPreviewPage.h  UIHelper.cpp  UIHelper.h  WindowBase.cpp  WindowBase.h
src/utils/: DataImportExport.cpp  DataImportExport.h  ScanCodeListener.cpp  ScanCodeListener.h
